Revert "feat: add model and animation LOD"
This reverts commit fd23cef37c9c0188ae4f53bfa33ed60a4eaa5e4f.